# deep_reinforce_learning_navigation

./: .gitignore  README.md  Tasks.md  turtle.repos
final_report/: final_report.ipynb
nusim/: CMakeLists.txt  README.md  package.xml
nusim/config/: basic_world.yaml  nusim.rviz
nusim/launch/: nusim.launch.xml
nusim/msg/: Measurement.msg
nusim/src/: nusim.cpp
nuslam/: CMakeLists.txt  README.md  package.xml
nuslam/config/: landmark_nusim.rviz  slam.yaml  slam_localhost.rviz  slam_nusim.rviz
nuslam/launch/: landmark.launch.xml  slam.launch.xml  start_turtlebot.launch.xml
nuslam/src/: landmarks.cpp  odometry.cpp  slam.cpp
nuturtle_control/: CMakeLists.txt  README.md  package.xml
nuturtle_control/config/: circle.yaml  turtlebot_nusim.rviz  turtlebot_world.rviz
nuturtle_control/launch/: remote_start.launch.xml  start_robot.launch.xml
nuturtle_control/src/: circle.cpp  odometry.cpp  turtle_control.cpp
nuturtle_control/srv/: Control.srv  InitialPose.srv
nuturtle_control/tests/: turtle_circle_test.cpp  turtle_circle_test.launch.xml  turtle_control_test.cpp  turtle_control_test.launch.xml  turtle_odom_test.cpp  turtle_odom_test.launch.xml
nuturtle_deep_rl/: package.xml  setup.cfg  setup.py
nuturtle_deep_rl/config/: deep_rl.yaml  drl.rviz  drl_multi.rviz
nuturtle_deep_rl/launch/: nuturtle_drl.launch.xml  nuturtle_drl_multi.launch.py  ppo_turtle_tensorboard.launch.xml
nuturtle_deep_rl/nuturtle_deep_rl/: nuturtle_dqn_env.py  nuturtle_drl.py  nuturtle_env.py  nuturtle_ppo_env.py
nuturtle_description/: CMakeLists.txt  README.md  package.xml
nuturtle_description/config/: basic_all.rviz  basic_blue.rviz  basic_green.rviz  basic_purple.rviz  basic_red.rviz  diff_params.yaml
nuturtle_description/launch/: load_all.launch.xml  load_one.launch.py
nuturtle_description/urdf/: turtlebot3_burger.urdf.xacro
nuturtle_interfaces/: CMakeLists.txt  package.xml
nuturtle_interfaces/msg/: Measurement.msg
nuturtle_slam/: CMakeLists.txt  package.xml
nuturtle_slam/config/: drl.rviz  slam.rviz  slam_config.yaml
nuturtle_slam/launch/: nuturtle_slam.launch.xml
turtlelib/: CMakeLists.txt  README.md  package.xml
turtlelib/execercises/: B6_frame_input.txt  B6_frame_output.txt
turtlelib/include/turtlelib/: circ_line.hpp  detect.hpp  diff_drive.hpp  ekf_slam.hpp  geometry2d.hpp  se2d.hpp  svg.hpp  trig2d.hpp  wall_range.hpp
turtlelib/src/: circ_line.cpp  detect.cpp  diff_drive.cpp  ekf_slam.cpp  frame_main.cpp  geometry2d.cpp  se2d.cpp  svg.cpp  trig2d.cpp  wall_range.cpp
turtlelib/tests/: test_circ_line.cpp  test_detect.cpp  test_diff_drive.cpp  test_geometry2d.cpp  test_se2d.cpp  test_svg.cpp  test_trig2d.cpp  test_wall_range.cpp
