<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nuslam</name>
    <version>0.0.0</version>
    <description>SLAM algorithm of the turtlebot</description>
    <maintainer email="JingkunLiu2025@u.northwestern.edu">Allen Liu</maintainer>
    <license>APLv2</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>rclcpp</depend>
    <depend>tf2_ros</depend>
    <depend>rcl_interfaces</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nuturtle_control</depend>
    <depend>nuturtle_interfaces</depend>
    <depend>nusim</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>