<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nuturtle_slam</name>
    <version>0.1.1</version>
    <description>Package for configuring slam on turtlebot3</description>
    <maintainer email="JingkunLiu2025@u.northwestern.edu">jliu</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>nusim</depend>
    <depend>nuturtle_control</depend>
    <depend>turtlebot3_teleop</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>